--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -16,6 +16,9 @@
             font-size: 1em;
         }
 
+        .ribbons-wrapper {
+            width: 110%;
+        }
         .ribbon1 {
             background: #009688;
         }
