--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -10,6 +10,10 @@
     <link rel="stylesheet" href="style/template-navigation.css">
     <script src="scripts/utility_scripts.js"></script>
     <script src="templates/spring_boot/template.js"></script>
+    <script src="scripts/index.js"></script>
+    <script src="scripts/button_reset.js"></script>
+    <script src="scripts/button_back.js"></script>
+    <script src="scripts/button_next.js"></script>
     <style type="text/css">
         .ui-widget {
             font-family: Gill Sans, Arial, sans-serif;
@@ -82,254 +86,6 @@
     <!-- ************** -->
     <script type="text/javascript">
         $(document).ready(function () {
-            var templateContainer1 = $("div[includeTemplate1]");
-            var templateContainer2 = $("div[includeTemplate2]");
-            var templateContainer3 = $("div[includeTemplate3]");
-            $(templateContainer1).load($(templateContainer1).attr("includeTemplate1"), function () {
-                console.log("templates/template.html loaded.");
-
-                // [WEB_PAGE] LOAD: Project Template //
-                cloneAndEnableComponent($("div#projectTemplateContainer"), $("div#container"));
-                $("div#projectTemplateContainerClone select#projectTemplate").selectmenu({
-                    change: function (event, data) {
-                        $("div#bottomBar").css("display", "block");
-                        var selectedTemplate = data.item.value;
-
-                        /** ********************** **/
-                        /** [TEMPLATE] SPRING BOOT **/
-                        /** ********************** **/
-                        if (selectedTemplate == "spring-boot") {
-                            $("input#currentTemplate").val("springBoot");
-                            $("div#container").append("<div id='springBootContainer' style='display:flex; flex-wrap:wrap;'></div>");
-
-                            /** [TEMPLATE: COMPONENT] BASE_PACKAGE **/
-                            var packageName = $("input#package").val();
-                            let pattern = /^[a-z]+([.])[a-z]+([.]?[a-z]+)*$/i;
-                            if (!packageName || !pattern.test(packageName)) {
-                                $("<div title='Warning'>Please enter the package name (with correct format)!</div>").dialog(
-                                    {
-                                        modal: true,
-                                        buttons: {
-                                            Ok: function () {
-                                                $(this).dialog("close");
-                                                window.location.reload();
-                                            }
-                                        }
-                                    }
-                                );
-                            } else {
-                                spring_boot_template_values[technology_spec_spring_boot[0]] = packageName;
-                            }
-
-                            /** [TEMPLATE: COMPONENT] ENTITY **/
-                            if (technology_spec_spring_boot[1] == "entity") {
-                                // [WEB_PAGE] Sub Navigation //
-                                subNavigation = $("div#subNavigationTemplate").clone(true);
-                                styleSubNavigation(subNavigation, technology_spec_spring_boot[1]);
-                                $(subNavigation).appendTo("div#subNavigation");
-
-                                // [WEB_PAGE] Container //
-                                spring_boot_template_values[technology_spec_spring_boot[1]] = [];
-                                cloneAndEnableComponent($("div#" + technology_spec_spring_boot[1] + "TemplateContainer"), $("div#springBootContainer"));
-
-                                $("input#previousScreen").val(null);
-                                $("input#currentScreen").val(technology_spec_spring_boot[1]);
-                                $("button#reset").css("display", "block");
-                                $("button#next").css("display", "block");
-
-                            }
-
-
-                            /** ************** **/
-                            /** [TEMPLATE] XYZ **/
-                            /** ************** **/
-                        } else {
-                        }
-
-
-                        // [WEB_PAGE] UNLOAD: Project Template //
-                        $("div#projectTemplateContainerClone").hide();
-                        $("div#projectTemplateNavigation").css("opacity", "0.4");
-                    }
-                });
-
-            });
-            $(templateContainer2).load($(templateContainer2).attr("includeTemplate2"), function () {
-                console.log("templates/spring_boot/entity_template.html loaded.");
-            });
-            $(templateContainer3).load($(templateContainer3).attr("includeTemplate3"), function () {
-                console.log("templates/spring_boot/service_template.html loaded.");
-            });
-
-            $("button#reset").button().click(function () {
-                var currentTemplate = $("input#currentTemplate").val();
-                var currentScreen = $("input#currentScreen").val();
-                var previousScreen = $("input#previousScreen").val();
-
-                /** ********************** **/
-                /** [TEMPLATE] SPRING BOOT **/
-                /** ********************** **/
-                if (currentTemplate = "springBoot") {
-                    // [WEB_PAGE] Container //
-                    $("div#"+currentScreen+"TemplateContainerClone").remove();
-                    cloneAndEnableComponent($("div#"+currentScreen+"TemplateContainer"), $("div#"+currentTemplate+"Container"));
-                }                
-
-            });
-
-            $("button#back").button().click(function () {
-                var currentTemplate = $("input#currentTemplate").val();
-                var currentScreen = $("input#currentScreen").val();
-                var previousScreen = $("input#previousScreen").val();
-
-                /** ********************** **/
-                /** [TEMPLATE] SPRING BOOT **/
-                /** ********************** **/
-                if (currentTemplate = "springBoot") {
-                    if ((currentScreen == technology_spec_spring_boot[2]) 
-                        && (previousScreen == technology_spec_spring_boot[1])) {
-                            $("div#subNavigation-" + currentScreen).css("opacity", "0.4");
-                        $("div#" + currentScreen + "TemplateContainerClone").css("display", "none");
-                        $("div#subNavigation-" + previousScreen).css("opacity", "1");
-                        $("div#" + previousScreen + "TemplateContainerClone").css("display", "block");
-                        $("button#back").css("display", "none")
-
-                        $("input#previousScreen").val(null);
-                        $("input#currentScreen").val(technology_spec_spring_boot[1]);
-                    }
-                }
-
-            });
-            $("button#next").button().click(function () {
-                var currentTemplate = $("input#currentTemplate").val();
-                var currentScreen = $("input#currentScreen").val();
-
-                /** ********************** **/
-                /** [TEMPLATE] SPRING BOOT **/
-                /** ********************** **/
-                if (currentTemplate = "springBoot") {
-                    if (currentScreen = technology_spec_spring_boot[1]) {
-                        /** [TEMPLATE: COMPONENT] ENTITY **/
-                        $("div#" + currentTemplate + "Container div#" + currentScreen + "TemplateContainerClone").each(function () {
-                            var entity = {};
-                            var name = $(this).find("input#entityName").val();
-                            entity["name"] = name;
-                            var table = $(this).find("input#entityTableName").val();
-                            entity["table"] = table;
-                            var shouldBeThreadSafe = $(this).find("input#shouldBeThreadSafe").prop("checked")
-                            entity["commentsForChatGPT"] = (shouldBeThreadSafe) ? "Please use @Version annotation for Optimistic Locking." : "";
-
-                            var attributes = [];
-                            $($(this).find("tr#entityAttributeROW")).each(function () {
-                                var attributeRow = {};
-                                var name = $(this).find("input#entityAttributeName").val();
-                                attributeRow["name"] = name;
-                                var type = $(this).find("select#entityAttributeType").val();
-                                attributeRow["type"] = type;
-                                var mappingType = $(this).find("select#entityAttributeMappingType").val();
-                                if (mappingType) attributeRow["mappingType"] = mappingType;
-
-                                attributes.push(attributeRow);
-                            })
-                            entity["attributes"] = attributes;
-                            spring_boot_template_values.entity.push(entity);
-                        });
-                        console.log("Entity-> " + JSON.stringify(spring_boot_template_values));
-                        $("div#" + currentScreen + "TemplateContainerClone").css("display", "none");
-                        $("div#subNavigation-" + technology_spec_spring_boot[1]).css("opacity", "0.4");
-
-
-                        /** [TEMPLATE: COMPONENT] SERVICE **/
-                        // [WEB_PAGE] Sub Navigation //
-                        var subNavigation = $("div#subNavigation-" + technology_spec_spring_boot[2]);
-                        if (subNavigation.length == 0) {
-                            subNavigation = $("div#subNavigationTemplate").clone(true);
-                            styleSubNavigation(subNavigation, technology_spec_spring_boot[2]);
-                            $(subNavigation).appendTo("div#subNavigation");
-                        } else {
-                            $(subNavigation).css("opacity", "1");
-                        }
-                        // [WEB_PAGE] Container //
-                        var templateContainerClones = $("div#" + technology_spec_spring_boot[2] + "TemplateContainerClone");
-                        if (templateContainerClones.length == 0) {
-                            spring_boot_template_values[technology_spec_spring_boot[2]] = [];
-                            cloneAndEnableComponent($("div#" + technology_spec_spring_boot[2] + "TemplateContainer"), $("div#" + currentTemplate + "Container"));
-                        } else {
-                            $(templateContainerClones).css("display", "block");
-                        }
-                        $("button#back").css("display", "block");
-                        $("input#previousScreen").val(technology_spec_spring_boot[1]);
-                        $("input#currentScreen").val(technology_spec_spring_boot[2]);                      
-
-
-
-                    } else if (currentScreen = technology_spec_spring_boot[2]) {
-                        /** [TEMPLATE: COMPONENT] SERVICE **/
-                        $("div#" + currentTemplate + "Container div#" + currentScreen + "TemplateContainerClone").each(function () {
-                            var service = {};
-                            var name = (spring_boot_template_values[technology_spec_spring_boot[0]]).split('.').pop();
-                            service["name"] = name + "Service";
-
-                            var functionz = [];
-                            $($(this).find("tr#functionRow")).each(function () {
-                                var functionRow = {};
-                                var name = $(this).find("input#functionName").val();
-                                functionRow["name"] = name;
-                                var processingLogic = $(this).find("textarea#functionProcessingLogic").val();
-                                functionRow["processing-logic"] = processingLogic;
-
-                                functionz.push(functionRow);
-                            })
-                            service["function"] = functionz;
-                            spring_boot_template_values.service.push(service);
-                        });
-                        console.log("Service-> " + JSON.stringify(spring_boot_template_values));
-                        $("div#" + currentScreen + "TemplateContainerClone").css("opacity", "0.4");
-                        $("div#subNavigation-" + technology_spec_spring_boot[2]).css("opacity", "0.4");
-
-                        $("input#previousScreen").val(technology_spec_spring_boot[2]);
-                        $("input#currentScreen").val(null); // as there are no next screen      
-
-
-
-                    } else {
-                        // --------- //
-                        // -- END -- //
-                        // --------- //
-                        $("button#next").css("opacity", "0.4");
-                        $("<div title='Confirmation'>Submitting the request to the server. Please check the 'staging' folder for the generated files.</div>").dialog(
-                            {
-                                modal: true,
-                                buttons: {
-                                    Ok: function () {
-                                        var serverPayload = {};
-                                        serverPayload["technology-spec"] = "spring-boot";
-                                        serverPayload["application-components"] = spring_boot_template_values;
-                                        console.log(JSON.stringify(serverPayload));
-
-
-                                        $.ajax({
-                                            type: "POST",
-                                            headers: { 'Access-Control-Allow-Origin': 'http://localhost:8080', 'content-type': 'application/json' },
-                                            url: "http://localhost:8080/spring-boot/code",
-                                            data: JSON.stringify(serverPayload)
-                                        });
-
-                                        $(this).dialog("close");
-                                        //window.location.reload();
-                                    }
-                                }
-                            }
-                        );
-                    }
-
-
-                }
-                /** ************** **/
-                /** [TEMPLATE] XYZ **/
-                /** ************** **/
-
-            });
 
         });
 
