Added ANGULAR Support

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="style/template-navigation.css">
     <script src="scripts/utility_scripts.js"></script>
     <script src="templates/spring_boot/template.js"></script>
+    <script src="templates/angular/template.js"></script>
     <script src="scripts/index.js"></script>
     <script src="scripts/button_reset.js"></script>
     <script src="scripts/button_back.js"></script>
@@ -75,19 +76,14 @@
     <div includeTemplate1="templates/template.html"></div>
     <div includeTemplate2="templates/spring_boot/entity_template.html"></div>
     <div includeTemplate3="templates/spring_boot/service_template.html"></div>
+    <div includeTemplate4="templates/angular/model_template.html"></div>
+    <div includeTemplate5="templates/angular/service_template.html"></div>
     <!-- [END] Templates Container -->
     <div id="footer">
         <h5>Copyright @Aaditya Designers</h5>
     </div>
 
 
-    <!-- ************** -->
-    <!-- BUSINESS LOGIC -->
-    <!-- ************** -->
-    <script type="text/javascript">
-        $(document).ready(function () {
-        });
-    </script>
 </body>
 
 </html>
